--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ title: Rustam
 subtitle-1: Orange
 subtitle-2: Grey
 description: Human Resources
-keys: <i class="fa fa-check-square"></i> HRIS&nbsp;&nbsp;<i class="fa fa-check-square"></i> Payroll&nbsp;&nbsp;<i class="fa fa-check-square"></i> Generalist
+keys: <i class="fa fa-check-square"></i> HR & PAYROLL ADMINISTRATION&nbsp;&nbsp;<i class="fa fa-check-square"></i> HR SYSTEM & TECHNOLOGY&nbsp;&nbsp;<i class="fa fa-check-square"></i> DATA ANALYTICS
 email: rustam.ismail@gmail.com
 linkedin: https://id.linkedin.com/in/rustamismail
 twitter: https://twitter.com/rooostam
@@ -17,7 +17,7 @@ github: https://github.com/thegreyside
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Portfolio for Human Resources in Mining and Oil & Gas Jobs'
+  description: 'Online Resume for Human Resources in Mining and Oil & Gas Jobs industries'
   rel-author: 'https://plus.google.com/u/0/+RustamIsmail/'
   rel-publisher: 'https://plus.google.com/u/0/+RustamIsmail/'
 
