--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ title: Rustam
 subtitle-1: Orange
 subtitle-2: Grey
 description: Human Resources
-keys: <i class="fa fa-check-square"></i> HR & PAYROLL ADMINISTRATION&nbsp;&nbsp;<i class="fa fa-check-square"></i> HR SYSTEM & TECHNOLOGY&nbsp;&nbsp;<i class="fa fa-check-square"></i> DATA ANALYTICS
+keys: <i class="fa fa-check-square"></i> HR ADMINISTRATION&nbsp;&nbsp;<i class="fa fa-check-square"></i> HR SYSTEM & TECHNOLOGY&nbsp;&nbsp;<i class="fa fa-check-square"></i> DATA ANALYTICS
 email: rustam.ismail@gmail.com
 linkedin: https://id.linkedin.com/in/rustamismail
 twitter: https://twitter.com/rooostam
