--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -15,21 +15,20 @@ menus:
 #-------------------------------
 # b
 
-about: >
-  Comprehend in general <strong>human resources, payroll and personnel admin</strong> with recognized skills in HR business process, HR database administration & IT infrastructure, digital data record management, payroll processing, roster and leave management, training/development and change of status.<br>Broad experience working at remote project site with high number of employees, dealing with employees in daily basis, streamlined day-to-day operations, employees’ mobilization & demobilization. Also have general understanding in handling other HR & GA matters, i.e. camp/housing, transport, recruitment, and petty cash.<br><br>Core competencies&#58 <strong>HR & Payroll Administration&#59 HR System/Technology & Infrastructure&#59 Employee communications & assistances&#59 Data mining, analysis & problem solving&#59 Cross cultural adaptability, Time management, scheduling, task oriented, and network/project planning&#59 Occupational Health & Safety (Ahli K3 Umum)&#59 Extensive computer literacies (Windows, OSX, Linux, Office, Database,</strong> and a little bit of <em>Web Development</em><strong>).</strong><p>This is his <b class="accent-color">orange</b> side.</p>
-
-other:  He has certified for General Expert of Occupational Health & Safety issued by Ministry of Employement The Republic of Indonesia.
+about: Comprehend in general human resources with main interest in personnel admin, HR business process, HR database administration & IT infrastructure. Had experience working at remote project site (construction, pipeline, telecommunication, coal upgrade, coal mining) with high number of employees.
+  
+other: He has certified for General Expert of Occupational Health & Safety issued by Ministry of Employement The Republic of Indonesia.
   
 more: >
   In the other part, while he's not working or in his spare times, he spends much of his time in front of the computer 
-  doing things he has passion of. Speaking about computer, he has various skills he can be proud of (as mentioned in the summary), including Linux operating system, several office & database applications, and of course a litle bit of web development. He surely loves hacking and playing around with network and security tools. This page (including the landing page that brought you here) was made from scratch using material design approach. You can download the source code <a href="https://github.com/thegreyside/thegreyside.github.io">here</a> for your own portfolio. It's free!. Well, that is all his <span class="grey-text">grey</span> side.
+  doing things he has passion of. Speaking about computer, he has various skills he can be proud of (as mentioned in the summary), including Linux operating system, several office & database applications, and of course a litle bit of web development. He surely loves hacking and playing around with network and security tools. This page (including the landing page that brought you here) was made from scratch using material design approach. You can download the source code <a href="https://github.com/thegreyside/thegreyside.github.io">here</a> for your resume and change whatever you like. Well, that is all his <span class="grey-text">grey</span> side.
   
 #--------------------------------
 # Skills
 
 skills:
-- {name: HR & Payroll Administration, value: 8}
-- {name: Training & Development, value: 6}
+- {name: HR Administration, value: 8}
+- {name: Petty cash&#44 Transport & accommodation, value: 6}
 - {name: HRIS Technology & Solutions, value: 7}
 - {name: Employee Relations & Communications, value: 7}
 - {name: HR Generalist, value: 7}
@@ -48,7 +47,7 @@ works:
   project: PT. Asmin Koalindo Tuhup, Indonesia, Coking Coal Project, Site Muara Tuhup, Central Borneo, Indonesia
   year: September 2010 - September 2014
   img: 
-  detail: <ul><li>Lead the HRIS section, finalized and validated the HR database system for up to 3500 employees, generated thousands of employees’ paperwork into digital data, and developed the new roster application (<a href="https://drive.google.com/open?id=0B2oQfd0BeZkjMzFlWks5cEZJU1k">File 7 MB</a>).</li><li>Supervised and guided the payroll process during closing book, resolved any problem in payroll process and efficiently optimized the execution time from 14 days to 8-10 days (<a href="https://drive.google.com/open?id=0B2oQfd0BeZkjaXB5NTZJZGctdFE">File 140 kB</a>).</li><li>Analyzed database and extracted information for decision making purposes regarding disciplinary, promotion/change of status, payroll, turnover, training and development issues.</li><li>Supervised and managed exclusively the change of status process for non-staffs and junior staffs.</li><li>Trained payroll staffs and clerks how to interact with HRIS system and payroll modules.</li><li>Trained HR subordinates about personnel administration business processes, basic database administration and using third party applications to finish the jobs properly.</li><li>Collaborated with other HR staffs dealing with C&B, recruitment, IR and OD.</li><li>Participated in Mining Production System development, it was intended to integrate the HR, HSE and Production system.</li></ul>
+  detail: <ul><li>Promoted to Supervisor in first 10 months of employment and lead the HRIS section, finalized and validated the HR database system for up to 3500 employees, and developed the new roster application (<a href="https://drive.google.com/open?id=0B2oQfd0BeZkjMzFlWks5cEZJU1k">File 7 MB</a>).</li><li>	Collaborated with payroll staffs, fixed any problems in payroll module and efficiently optimized the payroll processing time from 14 days to 8-10 days (<a href="https://drive.google.com/open?id=0B2oQfd0BeZkjaXB5NTZJZGctdFE">File 140 kB</a>).</li><li>Analyzed database and extracted information for decision making purposes regarding disciplinary, promotion/change of status, payroll, turnover, training and development issues.</li><li>Supervised and managed exclusively the training requests for the HE operators, the remuneration (change of status) process for non-staffs and junior staffs.</li><li>	Handled HE operators skill matrix records for manpower planning and training purposes before the Training Center organization was established.</li><li>Trained payroll staffs and clerks how to interact with HRIS system and payroll modules.</li><li>Trained HR subordinates about personnel administration business processes, basic database administration and using third party applications to finish the jobs properly.</li><li>Handled task as HR advisor and collaborated with IT programmers to build Mining Production System software.</li></ul>
 
 - title: Cashier & Travel Assistant
   company: PT. Thiess Contractors Indonesia
